--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "dependencies": {
-    "preact": "^10.5.14"
+    "bootstrap": "5.1.0",
+    "preact": "^10.5.14",
+    "preact-render-to-string": "^5.1.19",
+    "preact-router": "^3.2.1",
+    "react-bootstrap": "^2.0.0-beta.6"
   },
   "devDependencies": {
     "@types/webpack": "^5.28.0",
