--- a/package.json
+++ b/package.json
@@ -7,10 +7,17 @@
     "react-bootstrap": "^2.0.0-beta.6"
   },
   "devDependencies": {
+    "@babel/core": "^7.15.5",
+    "@storybook/addon-actions": "^6.3.8",
+    "@storybook/addon-essentials": "^6.3.8",
+    "@storybook/addon-links": "^6.3.8",
+    "@storybook/preact": "^6.3.8",
     "@types/webpack": "^5.28.0",
     "@typescript-eslint/eslint-plugin": "^4.31.0",
     "@typescript-eslint/parser": "^4.31.0",
+    "babel-loader": "^8.2.2",
     "copy-webpack-plugin": "^9.0.1",
+    "core-js": "^3.17.2",
     "css-loader": "^6.2.0",
     "eslint": "^7.32.0",
     "eslint-loader": "^4.0.2",
@@ -25,6 +32,7 @@
     "style-loader": "^3.2.1",
     "terser-webpack-plugin": "^5.2.3",
     "ts-loader": "^9.2.5",
+    "tsconfig-paths-webpack-plugin": "^3.5.1",
     "typescript": "^4.4.2",
     "webpack": "^5.52.0",
     "webpack-cli": "^4.8.0",
@@ -39,6 +47,8 @@
     "dev": "yarn clean && webpack --config ./webpack.config.js --mode development",
     "build": "yarn clean && webpack --config ./webpack.config.js --mode production --progress",
     "start": "webpack server --config ./webpack.config.js --mode development --host 0.0.0.0",
-    "clean": "rimraf ./dist"
+    "clean": "rimraf ./dist",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   }
 }
